# apMeshCenapad

./: .makefileopts  CMakeLists.txt  CMakePresets.json  Makefile  README.md  run_clang_format.sh  slrun_289_1.srm  slrun_289_1_2.srm  slrun_289_1_3.srm  slrun_289_1_4.srm  slrun_289_1_5.srm  slrun_289_1_6.srm  slrun_289_2_6.srm
Entrada/: monte_blanc_sub_1.bp  monte_clark.bp  monte_evereste_sub_1.bp  monte_rainier_sub_1.bp  monte_ruapehu.bp  monte_sant_helens.bp  mountain_1296_patches.bp  mountain_1444_patches.bp  mountain_289_patches.bp
Headers/Adapter/: Adaptador.h  AdaptadorPorCurvatura.h
Headers/Curvature/: Adjacente.h  Curvatura.h  CurvaturaAnalitica.h  CurvaturaDiscreta.h
Headers/Data/: Definitions.h  Edge.h  Elemento.h  Face.h  Geometria.h  Modelo.h  Noh.h  Ponto.h  Triangulo.h  Vertex.h  Vertice.h  Vetor.h
Headers/Estimate/: ChargeEstimateProcess.h
Headers/Generator/: Gerador.h  GeradorAdaptativo.h  GeradorAdaptativoPorCurvatura.h
Headers/IO/: Arquivo.h  Modelos3d.h  PatchBezierReader.h  ReaderPatches.h  WriteOBJFIle.h
Headers/Parallel/: ApMeshCommunicator.h  Communicator.h  Definitions.h  MPICommunicator.h  MPIMessage.h  Message.h  NoCommunicator.h  NoThreadManager.h  OMPThreadManager.h  ParallelMeshGenerator.h  TMCommunicator.h  ThreadManager.h  Transferable.h
Headers/Timer/: Timer.h
Sources/: main.cpp
Sources/Adapter/: Adaptador.cpp  AdaptadorPorCurvatura.cpp
Sources/Curvature/: Adjacente.cpp  Curvatura.cpp  CurvaturaAnalitica.cpp  CurvaturaDiscreta.cpp
Sources/Data/: Definitions.cpp  Edge.cpp  Elemento.cpp  Face.cpp  Geometria.cpp  Modelo.cpp  Noh.cpp  Ponto.cpp  Triangulo.cpp  Vertex.cpp  Vertice.cpp  Vetor.cpp
Sources/Estimate/: ChargeEstimateProcess.cpp
Sources/Generator/: Gerador.cpp  GeradorAdaptativo.cpp  GeradorAdaptativoPorCurvatura.cpp
Sources/IO/: Arquivo.cpp  Modelos3d.cpp  PatchBezierReader.cpp  ReaderPatches.cpp  WriteOBJFile.cpp
Sources/Parallel/: ApMeshCommunicator.cpp  Communicator.cpp  MPICommunicator.cpp  MPIMessage.cpp  (+8 more)
build_make/: ap_mesh
(+574 files in other folders)
